[package]
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>", "MaidSafe Developers <dev@maidsafe.net>"]
description = "Fake clock for deterministic testing of code depending on time."
documentation = "https://docs.rs/fake_instant"
homepage = "https://github.com/MingweiSamuel/fake_instant"
license = "MIT OR BSD-3-Clause"
name = "fake_instant"
readme = "README.md"
repository = "https://github.com/MingweiSamuel/fake_instant"
version = "0.5.0"
edition = "2021"

[dependencies]
